 * Killing the Specialists: Fix very misleading hints in mission panel
 * Killing the Specialists: Fix number of rounds measured being way too low

A Classic Fairytale:
 + Mission 3: Display number of turns left at timed parcours
 + Mission 2, Mission 5: Reduce computer hog levels
 + Mission 6: Change mines
 * Fix incorrect storytelling in mission descriptions
 * Mission 1: Fix error message spam when Leaks a Lot drowns
 * Mission 3: Fix cannibals sometimes doing nothing for a full turn
 * Mission 6: Fix cyborgs sometimes doing nothing for a full turn
 * Mission 9: Fix cannibal talking to himself in cut scene if mission starts with 3 natives

Missions:
 + Target Practice: Re-center camera to hog when projectile is destroyed or drowns

Theme customization:
 + Add fallback music with fallback-music and fallback-sd-music
 * Fix green color channel on themes with sd-tint

Lua API:
 + New library: SimpleMission: Allows to create missions more easily
 + New call: WriteLnToChat(string): Add a line in the chat
 + New call: SetVampiric(bool): Toggle vampirism
 + New call: SetLaserSight(bool): Toggle laser sight
 + New call: GetWind(): Returns current wind (approximation) from -100 to 100
 + New call: GetTeamName(teamIdx): Returns name of team with given index (starts at 0)
 + New call: GetTeamIndex(teamname): Returns index of team with given name
 + New call: GetTeamClan(teamname): Returns clan of team with given name
 + New call: SpawnSupplyCrate(x, y, content, [, amount]): Spawn ammo or utility crate, depending on content
 + New call: HealHog(gearUid, healthBoost[, showMessage[, tint]]): Heal hedgehog with graphical effects and message
 + New call: SetTeamLabel(teamname[, label]): Set an arbitrary label for a team, will be displayed next to the team bar
 + New call: SetSoundMask(soundId, isMasked): Allows to disable playing a sound effect from engine