@@ -73,6 +73,7 @@ A Classic Fairytale:
  + Mission 2, Mission 5: Reduce computer hog levels
  + Mission 6: Change mines
  * Fix incorrect storytelling in mission descriptions
+ * Missions now work even with corrupted team file, by using a default behaviour
  * Mission 1: Fix error message spam when Leaks a Lot drowns
  * Mission 3: Fix cannibals sometimes doing nothing for a full turn
  * Mission 6: Fix cyborgs sometimes doing nothing for a full turn
